resources/testcases_static_checks/tests/positive/isRmfa/r06.rls
../../../tests_common_data/from-evaluation-section/r06.rls