resources/testcases_static_checks/tests/negative/isDmfa/r02.rls
../../../tests_common_data/from-evaluation-section/r02.rls